--- a/src/planbox_ui/static/styles/style.css
+++ b/src/planbox_ui/static/styles/style.css
@@ -599,7 +599,7 @@ a.login-link, .product-header .user-menu-link {
   line-height: 1.25;
 }
 .the-answer p {
-  font-size: 1.375em;
+  font-size: 1.35em;
 }
 .product-overview {
   background-image: url(../images/workers.jpg);
@@ -608,10 +608,11 @@ a.login-link, .product-header .user-menu-link {
 }
 .call-to-action {
   background: #eee;
-  background: rgba(255,255,255,0.8);
+  background: rgba(255,255,255,0.85);
   color: #444;
   padding: 1em;
-  border-radius: 0.25em;
+  border-radius: 0.375em;
+  box-shadow: 0 0 2em rgba(0,0,0,0.1);
 }
 .product-pitch {
   padding-top: 1em;
